--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,18 +24,18 @@ jobs:
       - name: Run Cluster Playbook
         uses: dawidd6/action-ansible-playbook@v2
         with:
-          playbook: ansible/playbooks/<CREATECLUSTER>
+          playbook: ansible/playbooks/create_cluster.yml
           directory: ./
           vault_password: ${{secrets.ANSIBLE_VAULT_PASSWORD}}
           options: |
             --inventory ansible/inventory/inventory.yml
             --verbose
-      - name: Run K8S Management Playbook
-        uses: dawidd6/action-ansible-playbook@v2
-        with:
-          playbook: ansible/playbooks/<K8SMANAGEMENT>
-          directory: ./
-          vault_password: ${{secrets.ANSIBLE_VAULT_PASSWORD}}
-          options: |
-            --inventory ansible/inventory/k8s.yml
-            --verbose
+#      - name: Run K8S Management Playbook
+#        uses: dawidd6/action-ansible-playbook@v2
+#        with:
+#          playbook: ansible/playbooks/<K8SMANAGEMENT>
+#          directory: ./
+#          vault_password: ${{secrets.ANSIBLE_VAULT_PASSWORD}}
+#          options: |
+#            --inventory ansible/inventory/k8s.yml
+#            --verbose
