--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,12 +30,12 @@ jobs:
           options: |
             --inventory ansible/inventory/inventory.yml
             --verbose
-#      - name: Run K8S Management Playbook
-#        uses: dawidd6/action-ansible-playbook@v2
-#        with:
-#          playbook: ansible/playbooks/<K8SMANAGEMENT>
-#          directory: ./
-#          vault_password: ${{secrets.ANSIBLE_VAULT_PASSWORD}}
-#          options: |
-#            --inventory ansible/inventory/k8s.yml
-#            --verbose
+      - name: Run K8S Management Playbook
+        uses: dawidd6/action-ansible-playbook@v2
+        with:
+          playbook: ansible/playbooks/k8s_management.yml
+          directory: ./
+          vault_password: ${{secrets.ANSIBLE_VAULT_PASSWORD}}
+          options: |
+            --inventory ansible/inventory/k8s.yml
+            --verbose
